# Nook

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  user_guide.md
.github/workflows/: CI-Long_Build&Verif.yml  ci-new.yml  ci-new2.yml  ci.yml  fast-build.yml  fast-build2.yml  lockfile-check.yml  prepare-sqlx.yml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/.sqlx/: query.json
backend/migrations/: 001_create_tables.sql  001_initial.sql  002_conversations_messages.sql
backend/src/: auth.rs  cleanup.rs  db.rs  emergency.rs  main.rs  upload.rs  webrtc.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  package.json.bak  svelte.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.svelte  app.d.ts  app.html  index.html  main.js  service-worker.ts
frontend/src/components/: MediaPlayer.svelte  MediaRecorder.svelte
frontend/src/lib/: auth.js  authStore.js  backup.ts  chatStore.ts  conversationStore.ts  crypto.js  crypto.ts  device.ts  emergency.ts  storage.ts  types.ts  webrtc-calls.ts  webrtc.ts
frontend/src/lib/ui/: ThemeStore.ts  ThemeSwitcher.svelte
frontend/src/lib/ui/themes/: jardin.css  maison.css  space.css
frontend/src/routes/: +layout.svelte  +page.svelte  index.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/admin/analytics/: +page.svelte
frontend/src/routes/calendar/: +page.svelte
frontend/src/routes/call/: +page.svelte
frontend/src/routes/change-password/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/create-password/: +page.svelte
frontend/src/routes/events/: +page.svelte
frontend/src/routes/help/: +page.svelte
frontend/src/routes/join/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/polls/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/: manifest.json
static/: admin.html  index.html
