[package]
name = "nook-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tower-service = "0.3"
http = "1.0"
serde_urlencoded = "0.7"

# 🔒 Fixes pour éviter edition2024
home = "=0.5.11"
base64ct = "=1.7.3"