[package]
name = "nook-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "content-type"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tower-service = "0.3"
http = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls",
    "webpki-roots",
    "ring"
] }

# 🔒 Fixes pour éviter edition2024
home = "=0.5.11"
base64ct = "=1.7.3"